tests/bad/no_return_switch.ae
/// fail: Function does not always return

def foo(): string {
	match 5 {
		1 => return "hello"
		2 => return "world"
		3 => {}
		else => return "nope"
	}
}